added hosting on azure

--- a/Email.Api/appsettings.json
+++ b/Email.Api/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=ManagePlan;Integrated Security=True;MultipleActiveResultSets=True"
+    //"DefaultConnection": "Data Source=.;Initial Catalog=ManagePlan;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=tcp:emailtracker21.database.windows.net,1433;Initial Catalog=EmailTracker;Persist Security Info=False;User ID=thabani;Password=T4real4real;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
